# Scientific_computing

./: CMakeLists.txt  Line_Width.cpp  Line_Width.h  Line_Width.ui  README.md  ResCap_Conversion.cpp  ResCap_Conversion.h  ResCap_Conversion.ui  Scientific_computing.qrc  UnitConverterHandler.cpp  UnitConverterHandler.h  Voltage_Divider.cpp  Voltage_Divider.h  Voltage_Divider.ui  ai_studio_code_cpp  ledcurrentlimit.cpp  ledcurrentlimit.h  ledcurrentlimit.ui  main.cpp  mainwindow - backup_ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  via_current_cal.cpp  via_current_cal.h  via_current_cal.ui
.qtcreator/: CMakeLists.txt.user.1a5f09e
DOC/: 演算法筆記.txt
